
[tool.poetry]
name = "proxybroker"
version = "0.4.0"
description = "[Finder/Checker/Server] Finds public proxies from multiple sources and concurrently checks them. Supports HTTP(S) and SOCKS4/5."
authors = ["Constverum <constverum@gmail.com>"]
repository = "https://github.com/constverum/ProxyBroker"
homepage = "http://proxybroker.readthedocs.io/"
documentation = "http://proxybroker.readthedocs.io/"
license = "Apache-2.0"
readme = "README.md"
packages = []
include = ["proxybroker/data/*.mmdb"]
classifiers = [
    'Development Status :: 5 - Production/Stable',
    'Environment :: Console',
    'Environment :: Web Environment',
    'Intended Audience :: Developers',
    'Programming Language :: Python :: 3.8',
    'Programming Language :: Python :: 3.9',
    'Programming Language :: Python :: 3.10',
    'Operating System :: POSIX',
    'Operating System :: MacOS :: MacOS X',
    'Operating System :: Microsoft :: Windows',
    'Topic :: Internet :: WWW/HTTP :: Indexing/Search',
    'Topic :: Internet :: Proxy Servers',
    'License :: OSI Approved :: Apache Software License',

]

[tool.poetry.dependencies]
python = "^3.8"
aiohttp = "^3.8.1"
aiodns = "^3.0.0"
attrs = "^22.1.0"
maxminddb = "^2.2.0"
cachetools = "^5.2.0"
click = "^8.1.3"

[tool.poetry.dev-dependencies]
flake8 = ">=3.7"
isort = ">=4.3"
pytest = ">=4.3"
pytest-asyncio = ">=0.10"
pytest-runner = ">=4.4"
alabaster = "^0.7.12"
pytest-isort = ">=0.3"
pytest-flake8 = ">=1.0"
pytest-mock = ">=1.10.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
proxybroker = "proxybroker.cli:cli"

[tool.black]
py36 = true
line-length = 88
skip-string-normalization = true
include = '\.pyi?$'
exclude = '''
(
  /(
      \.eggs         # exclude a few common directories in the
    | \.git          # root of the project
    | \.venv         # virtualenv
    | build
    | dist
  )
)
'''

[tool.pytest.ini_options]
flake8-ignore = ['*.py']
isort_ignore = ['*.py']